--- a/index.html
+++ b/index.html
@@ -131,9 +131,20 @@
             <div class="container">
                 <h2 class="section-title">Find Cleanups Near You</h2>
                 <div class="map-container">
-                    <div id="map" class="map-placeholder">
-                        <p>🗺️ Interactive map will load here</p>
-                        <p class="map-hint">Click "Find Cleanups Near Me" to enable location services</p>
+                    <iframe 
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3988.5662747890186!2d103.95339331475394!3d1.3814970988892916!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMcKwMjInNTMuMiJOIDEwM8KwNTcnMjAuMSJF!5e0!3m2!1sen!2ssg!4v1234567890123!5m2!1sen!2ssg&markers=color:blue%7Clabel:Next%20Cleanup%7C1.381497,103.955574" 
+                        width="100%" 
+                        height="500" 
+                        style="border:0; border-radius: var(--radius-lg);" 
+                        allowfullscreen="" 
+                        loading="lazy" 
+                        referrerpolicy="no-referrer-when-downgrade"
+                        title="Pasir Ris Beach Cleanup Location">
+                    </iframe>
+                    <div style="margin-top: 1rem; padding: 1rem; background: var(--white); border-radius: var(--radius-md); box-shadow: var(--shadow-sm);">
+                        <h3 style="margin-bottom: 0.5rem; color: var(--primary);">📍 Next Cleanup Location</h3>
+                        <p style="font-weight: 600; font-size: 1.1rem; margin-bottom: 0.25rem;">Pasir Ris Beach</p>
+                        <p style="color: var(--gray-700); font-size: 0.875rem;">Coordinates: 1.381497, 103.955574</p>
                     </div>
                 </div>
             </div>
